fix alignment quicksearch

--- a/public/style.css
+++ b/public/style.css
@@ -63,6 +63,10 @@ body {
   background-color: white;
 }
 
+.banner__form {
+  display: flex;
+}
+
 .country-label {
   margin-bottom: 1rem;
 }
@@ -71,6 +75,7 @@ body {
   border: 4px solid black;
   background-color: white;
   margin-top: 1.5rem;
+  text-align: center;
 }
 .country-text {
   font-size: 1.3rem;
